--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
           { texto: "Explorar diretamente, ou mediante concessão, os serviços locais de gás canalizado", resposta: "Estado", fundamento: "Art. 25, § 2º, CF" },
           { texto: "Instituir regiões metropolitanas, aglomerações urbanas e microrregiões", resposta: "Estado", fundamento: "Art. 25, § 3º, CF" },
           { texto: "Exercer as competências que não lhes sejam vedadas (Competência Residual)", resposta: "Estado", fundamento: "Art. 25, § 1º, CF" },
-          { texto: "Legislar concorrentemente sobre direito tributário, financeiro e penitenciário", resposta: "Estado", fundamento: "Art. 24, I, CF" },
-          { texto: "Legislar concorrentemente sobre orçamento", resposta: "Estado", fundamento: "Art. 24, II, CF" },
-          { texto: "Legislar concorrentemente sobre juntas comerciais", resposta: "Estado", fundamento: "Art. 24, III, CF" },
-          { texto: "Legislar concorrentemente sobre custas dos serviços forenses", resposta: "Estado", fundamento: "Art. 24, IV, CF" },
-          { texto: "Legislar concorrentemente sobre produção e consumo", resposta: "Estado", fundamento: "Art. 24, V, CF" },
-          { texto: "Legislar concorrentemente sobre florestas, caça, pesca e fauna", resposta: "Estado", fundamento: "Art. 24, VI, CF" },
-          { texto: "Legislar concorrentemente sobre proteção ao patrimônio histórico e cultural", resposta: "Estado", fundamento: "Art. 24, VII, CF" },
-          { texto: "Legislar concorrentemente sobre responsabilidade por dano ao meio ambiente", resposta: "Estado", fundamento: "Art. 24, VIII, CF" },
-          { texto: "Legislar concorrentemente sobre educação, cultura, ensino e desporto", resposta: "Estado", fundamento: "Art. 24, IX, CF" },
-          { texto: "Legislar concorrentemente sobre criação do juizado de pequenas causas", resposta: "Estado", fundamento: "Art. 24, X, CF" },
-          { texto: "Legislar concorrentemente sobre procedimentos em matéria processual", resposta: "Estado", fundamento: "Art. 24, XI, CF" },
-          { texto: "Legislar concorrentemente sobre previdência social e defesa da saúde", resposta: "Estado", fundamento: "Art. 24, XII, CF" },
-          { texto: "Legislar concorrentemente sobre assistência jurídica e Defensoria pública", resposta: "Estado", fundamento: "Art. 24, XIII, CF" },
-          { texto: "Legislar concorrentemente sobre integração social de pessoas com deficiência", resposta: "Estado", fundamento: "Art. 24, XIV, CF" },
-          { texto: "Legislar concorrentemente sobre proteção à infância e à juventude", resposta: "Estado", fundamento: "Art. 24, XV, CF" },
-          { texto: "Legislar concorrentemente sobre organização, garantias e direitos das polícias civis", resposta: "Estado", fundamento: "Art. 24, XVI, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre direito tributário, financeiro e penitenciário", resposta: "Estado", fundamento: "Art. 24, I, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre orçamento", resposta: "Estado", fundamento: "Art. 24, II, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre juntas comerciais", resposta: "Estado", fundamento: "Art. 24, III, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre custas dos serviços forenses", resposta: "Estado", fundamento: "Art. 24, IV, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre produção e consumo", resposta: "Estado", fundamento: "Art. 24, V, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre florestas, caça, pesca e fauna", resposta: "Estado", fundamento: "Art. 24, VI, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre proteção ao patrimônio histórico e cultural", resposta: "Estado", fundamento: "Art. 24, VII, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre responsabilidade por dano ao meio ambiente", resposta: "Estado", fundamento: "Art. 24, VIII, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre educação, cultura, ensino e desporto", resposta: "Estado", fundamento: "Art. 24, IX, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre criação do juizado de pequenas causas", resposta: "Estado", fundamento: "Art. 24, X, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre procedimentos em matéria processual", resposta: "Estado", fundamento: "Art. 24, XI, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre previdência social e defesa da saúde", resposta: "Estado", fundamento: "Art. 24, XII, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre assistência jurídica e Defensoria pública", resposta: "Estado", fundamento: "Art. 24, XIII, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre integração social de pessoas com deficiência", resposta: "Estado", fundamento: "Art. 24, XIV, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre proteção à infância e à juventude", resposta: "Estado", fundamento: "Art. 24, XV, CF" },
+          { texto: "Legislar concorrentemente (junto com a União e o DF) sobre organização, garantias e direitos das polícias civis", resposta: "Estado", fundamento: "Art. 24, XVI, CF" },
           { texto: "Exercer competência legislativa plena inexistindo lei federal sobre normas gerais", resposta: "Estado", fundamento: "Art. 24, § 3º, CF" },
 
           // MUNICÍPIO
